[package]
name = "ka-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.3.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
urlencoding = "2.1.2"
lazy_static = "1.4"
bytes = "1.4.0"
futures = "0.3.28"
